test/testdata/number/modulo_by_zero_error.lox
1 % 0; // error: cannot modulo by 0
